--- a/Style.css
+++ b/Style.css
@@ -13,16 +13,22 @@
 @invite 2Jwh2nS
 **/
 
+
+
+
+
 @import url(https://discordstyles.github.io/HorizontalServerList/dist/HorizontalServerList.css);
 
-@import url('https://clearvision.gitlab.io/v6/main.css%22');
+@import url('https://clearvision.gitlab.io/v6/main.css');
 
 /** I've commented most of these values so you can change them yourself. If you're having trouble, or you want to do more than what these values allow for, a volunteer might be able to help you in my server. **/
 
 :root{
-/** Backdrop image which is shown behind the app. Can also be an HTML color. Falls back to accent color if invalid.
-   To use an image from your computer, upload it somewhere first, copy its link, then paste it below. **/
-   --background-image: url('https://images6.alphacoders.com/910/thumb-1920-910149.jpg') !important ; 
-   --main-color: #ff0000;
-   --hover-color: #ff0000;
+/* ACCENT COLORS */
+  /* ACCENT COLORS */
+	--background-image: url('https://cdn.discordapp.com/attachments/853341403152121876/1089229310390435980/unknown.png') !important ;
+   --background-overlay: rgba(0,0,0,0.5);
+   --main-color: #9b0404;
+   --hover-color: #c20505;
+	
 }
