--- a/Style.css
+++ b/Style.css
@@ -19,7 +19,7 @@
 
 @import url(https://discordstyles.github.io/HorizontalServerList/dist/HorizontalServerList.css);
 
-@import url('https://clearvision.gitlab.io/v6/main.css');
+@import url('https://clearvision.gitlab.io/ClearVision-v6/main.css');
 
 /** I've commented most of these values so you can change them yourself. If you're having trouble, or you want to do more than what these values allow for, a volunteer might be able to help you in my server. **/
 
