--- a/Style.css
+++ b/Style.css
@@ -1,23 +1,10 @@
-/**
- 
-@name Discord+
-@version 3.2.0
-**/
-
-
-
-
-
 @import url(https://discordstyles.github.io/HorizontalServerList/dist/HorizontalServerList.css);
 
-@import url('https://clearvision.gitlab.io/ClearVision-v6/main.css');
-
-/** I've commented most of these values so you can change them yourself. If you're having trouble, or you want to do more than what these values allow for, a volunteer might be able to help you in my server. **/
+@import url(https://clearvision.github.io/ClearVision-v6/main.css);
 
 :root{
 	--background-image: url('https://cdn.discordapp.com/attachments/853341403152121876/1089229310390435980/unknown.png') !important ;
 	--background-overlay: rgba(0,0,0,0.5);
 	--main-color: #9b0404;
 	--hover-color: #c20505;
-	
 }
