--- a/Style.css
+++ b/Style.css
@@ -3,7 +3,7 @@
 @import url(https://clearvision.github.io/ClearVision-v6/main.css);
 
 :root{
-	--background-image: url('https://cdn.discordapp.com/attachments/853341403152121876/1089229310390435980/unknown.png') !important ;
+	--background-image: url('https://github.com/MrSa2660/Theme/blob/6fa16d2b01703e4f297190d35745cae52a8adbf9/unknown.png') !important ;
 	--background-overlay: rgba(0,0,0,0.5);
 	--main-color: #9b0404;
 	--hover-color: #c20505;
