--- a/Style.css
+++ b/Style.css
@@ -3,7 +3,7 @@
 @import url(https://clearvision.github.io/ClearVision-v6/main.css);
 
 :root{
-	--background-image: url('https://github.com/MrSa2660/Theme/blob/6fa16d2b01703e4f297190d35745cae52a8adbf9/unknown.png') !important ;
+	--background-image: url('https://cdn.discordapp.com/attachments/853335941196546078/1230600111101313107/unknown.png?ex=6622c529&is=662173a9&hm=e0a5321f95de006d26c2535c2ae043b2dff448f544cf53e7ca38a3dd6dc1d0eb&') !important ;
 	--background-overlay: rgba(0,0,0,0.5);
 	--main-color: #9b0404;
 	--hover-color: #c20505;
